Update for TF 2 release, also update plt style

--- a/notebooks/01_00_tensorflow_test.ipynb
+++ b/notebooks/01_00_tensorflow_test.ipynb
@@ -46,7 +46,6 @@
     "import os\n",
     "try:\n",
     "    # See if we are running on google.colab\n",
-    "    import google.colab\n",
     "    from google.colab import files\n",
     "    os.chdir('..')\n",
     "    if not (Path.cwd() / '.kaggle').is_dir():\n",
@@ -62,8 +61,6 @@
     "        !git clone https://github.com/SachsLab/IntracranialNeurophysDL.git\n",
     "        os.chdir('IntracranialNeurophysDL')\n",
     "    IN_COLAB = True\n",
-    "    # Setup tensorflow 2.0\n",
-    "    !pip install -q tensorflow-gpu==2.0.0-rc0\n",
     "except ModuleNotFoundError:\n",
     "    import sys\n",
     "    if Path.cwd().stem == 'notebooks':\n",
@@ -73,7 +70,7 @@
     "    IN_COLAB = False\n",
     "    \n",
     "import matplotlib.pyplot as plt\n",
-    "plt.rcParams.update({'font.size': 22})"
+    "plt.style.use(['dark_background', 'presentation'])"
    ]
   },
   {
