--- a/notebooks/04_01_CNN_inspect_model.ipynb
+++ b/notebooks/04_01_CNN_inspect_model.ipynb
@@ -25,26 +25,34 @@
     "# Cell to normalize local and Colab environments.\n",
     "from pathlib import Path\n",
     "import os\n",
+    "import tensorflow as tf\n",
+    "import datetime\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
     "try:\n",
     "    # See if we are running on google.colab\n",
-    "    import google.colab\n",
     "    from google.colab import files\n",
     "    os.chdir('..')\n",
+    "    \n",
     "    if not (Path.home() / '.kaggle').is_dir():\n",
     "        # Configure kaggle\n",
-    "        files.upload()  # Find the kaggle.json file in your ~/.kaggle directory.\n",
-    "        !pip install -q kaggle\n",
-    "        !mkdir -p ~/.kaggle\n",
-    "        !mv kaggle.json ~/.kaggle/\n",
-    "        !chmod 600 ~/.kaggle/kaggle.json\n",
+    "        uploaded = files.upload()  # Find the kaggle.json file in your ~/.kaggle directory.\n",
+    "        if 'kaggle.json' in uploaded.keys():\n",
+    "            !mkdir -p ~/.kaggle\n",
+    "            !mv kaggle.json ~/.kaggle/\n",
+    "            !chmod 600 ~/.kaggle/kaggle.json\n",
+    "            \n",
     "    if Path.cwd().stem != 'IntracranialNeurophysDL':\n",
     "        if not (Path.cwd() / 'IntracranialNeurophysDL').is_dir():\n",
     "            # Download the workshop repo and change to its directory\n",
     "            !git clone --recursive https://github.com/SachsLab/IntracranialNeurophysDL.git\n",
     "        os.chdir('IntracranialNeurophysDL')\n",
+    "        \n",
+    "    !pip install -q kaggle\n",
+    "    plt.style.use('dark_background')\n",
     "    IN_COLAB = True\n",
-    "    # Setup tensorflow 2.0\n",
-    "    !pip install -q tensorflow-gpu==2.0.0-rc0\n",
+    "    \n",
     "except ModuleNotFoundError:\n",
     "    IN_COLAB = False\n",
     "    import sys\n",
@@ -59,22 +67,18 @@
     "    try:\n",
     "        shutil.rmtree(str(Path.cwd() / 'logs'))\n",
     "    except PermissionError:\n",
-    "        print(\"Unable to remove logs directory.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Additional imports and configs\n",
-    "import tensorflow as tf\n",
-    "import datetime\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
+    "        print(\"Unable to remove logs directory.\")\n",
+    "        \n",
     "from indl import turbo_cmap, reset_keras\n",
-    "plt.rcParams.update({'font.size': 22})\n",
+    "plt.rcParams.update({\n",
+    "    'axes.titlesize': 24,\n",
+    "    'axes.labelsize': 20,\n",
+    "    'lines.linewidth': 3,\n",
+    "    'lines.markersize': 10,\n",
+    "    'xtick.labelsize': 16,\n",
+    "    'ytick.labelsize': 16,\n",
+    "    'legend.fontsize': 18\n",
+    "})\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
    ]
@@ -203,6 +207,15 @@
     "from tensorflow.keras.models import load_model\n",
     "model = load_model(datadir / 'models' / (SUB_ID + '_model_best_all.h5'))\n",
     "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tf.keras.utils.plot_model(model)"
    ]
   },
   {
