--- a/notebooks/04_02_CNN_transfer_learning.ipynb
+++ b/notebooks/04_02_CNN_transfer_learning.ipynb
@@ -72,26 +72,34 @@
    "source": [
     "from pathlib import Path\n",
     "import os\n",
+    "import tensorflow as tf\n",
+    "import datetime\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
     "try:\n",
     "    # See if we are running on google.colab\n",
-    "    import google.colab\n",
     "    from google.colab import files\n",
     "    os.chdir('..')\n",
+    "    \n",
     "    if not (Path.home() / '.kaggle').is_dir():\n",
     "        # Configure kaggle\n",
-    "        files.upload()  # Find the kaggle.json file in your ~/.kaggle directory.\n",
-    "        !pip install -q kaggle\n",
-    "        !mkdir -p ~/.kaggle\n",
-    "        !mv kaggle.json ~/.kaggle/\n",
-    "        !chmod 600 ~/.kaggle/kaggle.json\n",
+    "        uploaded = files.upload()  # Find the kaggle.json file in your ~/.kaggle directory.\n",
+    "        if 'kaggle.json' in uploaded.keys():    \n",
+    "            !mkdir -p ~/.kaggle\n",
+    "            !mv kaggle.json ~/.kaggle/\n",
+    "            !chmod 600 ~/.kaggle/kaggle.json\n",
+    "            \n",
     "    if Path.cwd().stem != 'IntracranialNeurophysDL':\n",
     "        if not (Path.cwd() / 'IntracranialNeurophysDL').is_dir():\n",
     "            # Download the workshop repo and change to its directory\n",
     "            !git clone --recursive https://github.com/SachsLab/IntracranialNeurophysDL.git\n",
     "        os.chdir('IntracranialNeurophysDL')\n",
+    "        \n",
+    "    !pip install -q kaggle\n",
+    "    plt.style.use('dark_background')\n",
     "    IN_COLAB = True\n",
-    "    # Setup tensorflow 2.0\n",
-    "    !pip install tensorflow-gpu==2.0.0-beta0\n",
+    "    \n",
     "except ModuleNotFoundError:\n",
     "    IN_COLAB = False\n",
     "    import sys\n",
@@ -106,28 +114,18 @@
     "    try:\n",
     "        shutil.rmtree(str(Path.cwd() / 'logs'))\n",
     "    except PermissionError:\n",
-    "        print(\"Unable to remove logs directory.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "Vszx4v01SYRP"
-   },
-   "outputs": [],
-   "source": [
-    "# Additional imports\n",
-    "import tensorflow as tf\n",
-    "import datetime\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from indl import turbo_cmap, reset_keras\n",
+    "        print(\"Unable to remove logs directory.\")\n",
     "\n",
-    "# %load_ext tensorboard\n",
-    "plt.rcParams.update({'font.size': 22})\n",
+    "from indl import turbo_cmap, reset_keras\n",
+    "plt.rcParams.update({\n",
+    "    'axes.titlesize': 24,\n",
+    "    'axes.labelsize': 20,\n",
+    "    'lines.linewidth': 3,\n",
+    "    'lines.markersize': 10,\n",
+    "    'xtick.labelsize': 16,\n",
+    "    'ytick.labelsize': 16,\n",
+    "    'legend.fontsize': 18\n",
+    "})\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
    ]
@@ -409,6 +407,24 @@
     "\n",
     "shared_head, shared_tail, ss_layers = make_models(\n",
     "    T, n_classes=len(np.unique(Y)), aug_offset=MAX_OFFSET, rec_infos=rec_infos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tf.keras.utils.plot_model(shared_head)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tf.keras.utils.plot_model(shared_tail)"
    ]
   },
   {
@@ -696,7 +712,15 @@
     "xfer_model.compile(loss='sparse_categorical_crossentropy',\n",
     "                   optimizer='Nadam', metrics=['accuracy'])\n",
     "xfer_model.summary()\n",
-    "\n",
+    "tf.keras.utils.plot_model(xfer_model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "history = xfer_model.fit(x=ds_train, epochs=N_EPOCHS, validation_data=ds_valid, verbose=1)\n",
     "\n",
     "xfer_model.layers[0].save(datadir / 'models' / 'shared_head.h5')\n",
@@ -2256,13 +2280,7 @@
       "45/45 [==============================] - 1s 13ms/step - loss: 0.1349 - accuracy: 0.9911 - val_loss: 0.3005 - val_accuracy: 0.9204\n",
       "Epoch 94/180\n",
       "45/45 [==============================] - 1s 12ms/step - loss: 0.1149 - accuracy: 0.9956 - val_loss: 0.2569 - val_accuracy: 0.9558\n",
-      "Epoch 95/180\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 95/180\n",
       "45/45 [==============================] - 1s 12ms/step - loss: 0.1340 - accuracy: 0.9911 - val_loss: 0.3399 - val_accuracy: 0.9469\n",
       "Epoch 96/180\n",
       "45/45 [==============================] - 1s 13ms/step - loss: 0.1273 - accuracy: 0.9933 - val_loss: 0.5019 - val_accuracy: 0.9204\n",
@@ -2618,13 +2636,7 @@
       "45/45 [==============================] - 1s 12ms/step - loss: 0.0893 - accuracy: 0.9889 - val_loss: 0.1493 - val_accuracy: 0.9646\n",
       "Epoch 85/200\n",
       "45/45 [==============================] - 1s 13ms/step - loss: 0.1623 - accuracy: 0.9756 - val_loss: 0.2942 - val_accuracy: 0.9204\n",
-      "Epoch 86/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 86/200\n",
       "45/45 [==============================] - 1s 12ms/step - loss: 0.1536 - accuracy: 0.9778 - val_loss: 0.2857 - val_accuracy: 0.9204\n",
       "Epoch 87/200\n",
       "45/45 [==============================] - 1s 13ms/step - loss: 0.1268 - accuracy: 0.9889 - val_loss: 0.1537 - val_accuracy: 0.9735\n",
