AE TFP in progress

--- a/notebooks/05_04_betaVAE_TFP.ipynb
+++ b/notebooks/05_04_betaVAE_TFP.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#  Beta Variational Autoencoder using Tensorflow Probability\n",
+    "#  $\\beta$ Variational Autoencoder using Tensorflow Probability\n",
     "\n",
     "<table class=\"tfo-notebook-buttons\" align=\"left\">\n",
     "  <td>\n",
@@ -22,12 +22,9 @@
    "source": [
     "## Introduction\n",
     "\n",
-    "> This notebook is in very early stages of development and is not ready for public consumption.\n",
-    "When it is complete...\n",
-    "\n",
     "### Definition\n",
     "\n",
-    "Here we develop and test a disentangled sequential variational autoencoder. Let's break that down.\n",
+    "Here we implement a beta variational sequential autoencoder using tensorflow probability.\n",
     "\n",
     "An **autoencoder** first encodes an input into a low-dimensional latent representation (a.k.a. compress, bottleneck), and from there decodes (a.k.a. generates) an output that resembles the input.\n",
     "\n",
@@ -35,7 +32,7 @@
     "\n",
     "As the inputs to the decoder are not deterministic variables, but are prescribed to be random variables (typically gaussian), this is called **variational**.\n",
     "\n",
-    "Finally, the training is designed so that the model learns to encode a latent representation that is split into features that **disentangle** relevant and interpretable features. With careful model formulation, this can be used to disentangle time-dependent features (dynamics) and static features (content / context). Note that disentangled auto-encoders are by necessity variational, so we could drop the implied \"variational\" from our title. Additionally, one way to do the disentanglement makes use of a $\\beta$ parameter, and this approach is often called a $\\beta$-VAE, but that is not the way we will do disentanglement at the end of this notebook.\n",
+    "Finally, the training is designed so that the latent dimensions are orthogonal. The amount of loss contributed by the deviation of the latents from a multivariate orthonormal is scaled with a parameter called $\\beta$, which increases across epochs of training, so this approach is often called a $\\beta$-VAE.\n",
     "\n",
     "### Application\n",
     "\n",
@@ -43,7 +40,7 @@
     "\n",
     "Once trained, there are several applications for such a model.\n",
     "\n",
-    "The decoder part of the model is generative: we can provide an initial condition and then generate a realistic signal. For brain signals, this might be a useful tool to understand the model. In other domains, this can be used to generate animations / audio / video with e.g. the same speech, but the speaker has changed.\n",
+    "The decoder part of the model is generative: we can provide an initial condition and then generate a realistic signal. For brain signals, this might be a useful tool to understand the model. In other domains, this can be used to generate realistic animations / audio / video.\n",
     "\n",
     "The encoder part of the model takes a real input and compresses it to a meaningful latent representation. We know it is meaningful because it is sufficient to generate the input. These latent feature vectors are much more tractable as inputs into a simple decoder. Thus, the autoencoder can first be trained using all unlabeled data, then the encoder part can be transferred as the top layers of a new classification model that is further trained on a smaller labeled data set."
    ]
@@ -174,7 +171,19 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'indl'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-5-55ca0bc29273>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mindl\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmisc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msigfuncs\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0msigmoid\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mfunctools\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mpartial\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mN_LATENTS\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m4\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'indl'"
+     ]
+    }
+   ],
    "source": [
     "from indl.misc.sigfuncs import sigmoid\n",
     "from functools import partial\n",
@@ -272,9 +281,11 @@
    "source": [
     "### Modify dataset\n",
     "\n",
-    "The autoencoder tries to reconstruct the input, so we need the 'labels' in the dataset to be a copy of the input. We do this by mapping a function to the dataset, where the function is a simple lambda that takes in x,y and returns x,x.\n",
+    "Using Keras' training requires the dataset to be an x,y tuple, where x is the input and y are the values to which the model output will be compared. The autoencoder tries to reconstruct the input, thus the y values are just a copy of the x values. We do this by mapping a function to the dataset, where the function is a simple lambda that takes in x,y and returns x,x.\n",
     "\n",
-    "Actually our model creates 2 outputs, and Keras expects 2 different \"labels\" (true reconstructed data), so we go from x,y --> x,(x,x)"
+    "However, our model generates 2 outputs, so Keras expects 2-length tuple in y. So we map our data from x,y --> x,(x, x)\n",
+    "\n",
+    "Note, only the last output of the model is compared to the input, the others are used for loss calculations that do not depend on the model outputs. We can save memory by mapping the first two outputs to empty tensors."
    ]
   },
   {
@@ -292,7 +303,7 @@
    ],
    "source": [
     "ae_dataset = dataset.map(lambda x, y: (tf.cast(x, tf.float32),\n",
-    "                                       (tf.cast(x, tf.float32), tf.cast(x, tf.float32))))\n",
+    "                                       (tf.zeros(0, dtype=tf.float32), tf.cast(x, tf.float32))))\n",
     "print(ae_dataset.element_spec)"
    ]
   },
@@ -372,33 +383,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "tfb = tfp.bijectors\n",
     "def make_mvn_prior(ndim, trainable=False, offdiag=False):\n",
-    "    if trainable:\n",
-    "        if offdiag:\n",
-    "            prior = tfd.MultivariateNormalTriL(\n",
-    "                loc=tf.Variable(tf.zeros([LATENT_DIM], dtype=tf.float32)),\n",
-    "                scale_tril=tfp.util.TransformedVariable(tf.eye(LATENT_DIM, dtype=tf.float32),\n",
-    "                                                        tfp.bijectors.FillScaleTriL())\n",
-    "            )\n",
-    "        else:\n",
-    "            raise ValueError(\"Not yet implemented\")\n",
-    "    else:\n",
+    "    if not trainable:\n",
     "        if offdiag:\n",
     "            # With covariances\n",
     "            # Note: Diag must be > 0, upper triangular must be 0, and lower triangular may be != 0.\n",
     "            prior = tfd.MultivariateNormalTriL(\n",
-    "                loc=tf.zeros(LATENT_DIM),\n",
-    "                scale_tril=tf.eye(LATENT_DIM)\n",
+    "                loc=tf.zeros(ndim),\n",
+    "                scale_tril=tf.eye(ndim)\n",
     "            )\n",
     "        else:\n",
+    "            # TODO: Determine if there is a reason to use one of these over the other.\n",
     "            if True:\n",
-    "                # TODO: Come up with a switch / reason to use one of these over the other.\n",
-    "                prior = tfd.MultivariateNormalDiag(loc=tf.zeros(LATENT_DIM),\n",
-    "                                                   scale_diag=tf.ones(LATENT_DIM))\n",
+    "                prior = tfd.MultivariateNormalDiag(loc=tf.zeros(ndim), scale_diag=tf.ones(ndim))\n",
     "            else:\n",
-    "                prior = tfd.Independent(tfd.Normal(loc=tf.zeros(LATENT_DIM),\n",
-    "                                                   scale=1),\n",
+    "                prior = tfd.Independent(tfd.Normal(loc=tf.zeros(ndim), scale=1),\n",
     "                                        reinterpreted_batch_ndims=1)\n",
+    "    else:\n",
+    "        if offdiag:\n",
+    "            n_scale = tfd.MultivariateNormalTriL.params_size(ndim) - ndim\n",
+    "            prior = tfd.MultivariateNormalTriL(\n",
+    "                loc=tf.Variable(tf.random.normal([ndim], stddev=0.1, dtype=tf.float32)),\n",
+    "                scale_tril=tfp.util.TransformedVariable(\n",
+    "                    tf.random.normal([n_scale], stddev=0.1, dtype=tf.float32),\n",
+    "                    tfb.FillScaleTriL())\n",
+    "            )\n",
+    "        else:\n",
+    "            scale_shift = np.log(np.exp(1) - 1).astype(np.float32)\n",
+    "            prior = tfd.MultivariateNormalDiag(\n",
+    "                loc=tf.Variable(tf.random.normal([ndim], stddev=0.1, dtype=tf.float32)),\n",
+    "                scale_diag=tfp.util.TransformedVariable(\n",
+    "                    tf.random.normal([ndim], stddev=0.1, dtype=tf.float32),\n",
+    "                    tfb.Chain([tfb.Shift(1e-5), tfb.Softplus(), tfb.Shift(scale_shift)]))\n",
+    "            )\n",
     "    return prior"
    ]
   },
@@ -850,7 +868,7 @@
     "        manual_kl = tfd.kl_divergence(q_z, prior)\n",
     "        manual_kl = tf.reduce_mean(manual_kl)\n",
     "        \n",
-    "        loss = -recon_post_log_prob + kl_weight * manual_kl\n",
+    "        loss = -recon_post_log_prob + kl_beta * manual_kl\n",
     "        if False:  # Only works when no @tf.function\n",
     "            print(f\"recon_post_log_prob: {recon_post_log_prob}\")\n",
     "            print(f\"manual kl: {kl_weight} * {manual_kl}\")\n",
