Fixed up some wording in betaVAE_TFP

--- a/notebooks/05_04_betaVAE_TFP.ipynb
+++ b/notebooks/05_04_betaVAE_TFP.ipynb
@@ -463,7 +463,7 @@
     "\n",
     "For the `loc` there is nothing to do because it is already centred at 0 and there are no requirements for it to be positive.\n",
     "\n",
-    "For the `scale`, we want the loss to update values that are by default centered on 0, but when the distribution is sampled, the stddev is centered around 1. Also, we have to be careful that the stddev doesn't go negative. Scale can be transformed to meet the requirements by adding a bias to the scale and transforming it through [Softplus](https://en.wikipedia.org/wiki/Rectifier_(neural_networks)#Softplus). Thus, in the distribution itself, the variable for the scale is added to `np.log(np.exp(1) - 1)` (`=softplus_inverse(1.0) ~ 0.55`), and then softplus transformed to yield values centered on 1 (for inputs centered on 0) before it's used to parameterize the distribution for sampling.\n",
+    "For the `scale`, we want the loss to update values that are by default centered on 0, but when the distribution is sampled, the stddev is centered around 1. Also, we have to be careful that the stddev doesn't go negative. Scale can be transformed to meet the requirements by adding a bias to the scale and transforming it through [Softplus](https://en.wikipedia.org/wiki/Rectifier_(neural_networks)#Softplus). Thus, the inputs to the distribution's scale argument are around 0 (at least initially), then shifted by `np.log(np.exp(1) - 1)` (`=softplus_inverse(1.0) ~ 0.55`), then softplus transformed, and finally shifted by 1e-5 (to force > 0) to yield the value that will parameterize the dist stddev.\n",
     "\n",
     "```Python\n",
     "_loc = tfkl.Dense(LATENT_DIM)(_features)\n",
@@ -477,7 +477,7 @@
     ")([_loc, _scale_diag])\n",
     "```\n",
     "\n",
-    "In the case of a **trainable prior**, we can initialize the `tf.TransformedVariable` for the scale to be around 1 and use a bijector `tf.nn.softplus(_ + np.log(np.exp(1) - 1)) + 1e-5` before sampling. It's a little confusing that the TransformedVariable should be initialized to its transform value, but the stored initial value is obtained by transforming the initial value through the inverse of the bijector. See the `make_mvn_prior` function definition for an example."
+    "In the case of a **trainable prior**, we can initialize the `tf.TransformedVariable` for the scale to be around 1 and use a bijector `tf.nn.softplus(_ + np.log(np.exp(1) - 1)) + 1e-5` before sampling. It's a little confusing that the TransformedVariable should be initialized to its transformed value, and the stored variable value (i.e., the one subject to training) is inverse transforming the initialization value through the bijector. See the `make_mvn_prior` function definition for an example."
    ]
   },
   {
@@ -526,24 +526,27 @@
     "\n",
     "The latent posterior distribution is regularized to resemble the prior distribution by penalizing the KL divergence between the posterior and the prior. There are several ways to do this.\n",
     "\n",
-    "1. Add KL divergence to the model or a custom loss function\n",
-    "    1. Calculate loss:\n",
-    "        1. Using analytic KL divergence (not for mixture models):\n",
-    "            `kl_loss = tfd.kl_divergence(posterior, prior)`\n",
-    "        2. Manual KL divergence:\n",
-    "            `kl_loss = posterior.log_prob(sample) - prior.log_prob(sample)`\n",
-    "    2. It may be necessary to `tf.reduce_mean(kl_loss)` to match shape of other losses, depending on sampling.\n",
-    "    3. Add to other losses, like -log_likelihood.\n",
-    "2. Using [`tfpl.KLDivergenceAddLoss(prior)`](https://www.tensorflow.org/probability/api_docs/python/tfp/layers/KLDivergenceAddLoss)\n",
-    "3. Add KL regularizer directly to latent distribution.\n",
+    "1. Add the latent distribution to the model outputs then use loss functions for each output to penalize KL divergence from the prior. While the reconstructions's loss function will remain `-recon_dist.log_prob(expected_recon)`, the latent dist can use\n",
+    "    1. Analytic KL: `lambda _, latent_dist: tfd.kl_divergence(latent_dist, prior)`\n",
+    "    2. Quantitative KL: Need a func that accepts (true_x, latent_dist), samples latent_dist to get latent_sample, and returns `latent_dist.log_prob(latent_sample) - prior.log_prob(latent_sample)`.\n",
+    "2. Add KL regularizer directly to latent distribution (my preferred approach):\n",
     "    ```Python\n",
     "    posterior = tfpl.SomeLayer(...,\n",
     "                               activity_regularizer=tfpl.KLDivergenceRegularizer(\n",
     "                                   prior, weight=KL_WEIGHT)\n",
     "                              )\n",
     "    ```\n",
+    "3. Using [`tfpl.KLDivergenceAddLoss(prior)`](https://www.tensorflow.org/probability/api_docs/python/tfp/layers/KLDivergenceAddLoss).\n",
+    "    * This currently does not work; [see here](https://github.com/tensorflow/probability/issues/865).\n",
+    "4. Add KL divergence loss manually\n",
+    "    * `kl_loss = tfd.kl_divergence(latent, prior)`\n",
+    "    * `model.add_loss(weight * kl_loss, axis=0)`  # Might be necessary to reduce_mean depending on shapes.\n",
+    "5. Calculate KL loss in custom training calculation.\n",
+    "    * See custom training in this notebook.\n",
     "    \n",
-    "Adding the loss directly to the layer is the easiest way because then we don't need to keep a handle for the posterior distribution itself.\n",
+    "Analytic KL (or `kl_exact`) works only when the latent and prior dists are of the same type, and not for mixture models.\n",
+    "\n",
+    "In this notebook I demonstrate 1, 2, and 5. 1 has weight=0 so it isn't actually used, but nevertheless it is still convenient to have Keras print out its values during training. 5 is coded but the custom training loop is commented out. Ultimately, 2 is what is used to update the latent.\n",
     "    \n",
     "##### Weighting by number of samples\n",
     "\n",
@@ -559,7 +562,7 @@
     "* In disentangled vae example: Not done!\n",
     "* [In LFADS](https://github.com/tensorflow/models/blob/master/research/lfads/lfads.py#L829-L830): \"normalized only by batch size, not by dimension or by time steps\" - implicit in `tf.reduce_mean()`.\n",
     "\n",
-    "In my confusion I [posted a question](https://groups.google.com/a/tensorflow.org/forum/#!topic/tfprobability/ZZKblgnDnUE) to the TensorFlow Probability mailing list. Someone answered pointing me to other similar conversations. As best as I can understand, it seems that the **conventional scaling to apply to the KL divergence term is (batch_size / number_of_samples)**."
+    "In my confusion I [posted a question](https://groups.google.com/a/tensorflow.org/forum/#!topic/tfprobability/ZZKblgnDnUE) to the TensorFlow Probability mailing list. Someone answered pointing me to other similar conversations. As best as I can understand, it seems that the **conventional scaling to apply to the KL divergence term is (batch_size / number_of_samples)**. Upon further inspection, I think that depends on which of the above methods of adding KL Divergence loss"
    ]
   },
   {
